fix(utilities.sass): Fixed naming and added .make-hidden-mobile-only and .make-invisible-mobile-only classes.

--- a/src/sass/utilities/_utilities.sass
+++ b/src/sass/utilities/_utilities.sass
@@ -43,7 +43,12 @@ $space-size: 1.0rem !default
 +mobile
     .make-phone-hidden
         display: none !important
-    .make-invisible-phone
+    .make-phone-invisible
+        visibility: hidden !important
++mobile-only
+    .make-hidden-mobile-only
+        display: none !important
+    .make-invisible-mobile-only
         visibility: hidden !important
 +tablet    
     .make-tablet-hidden
@@ -56,9 +61,9 @@ $space-size: 1.0rem !default
     .make-invisible-tablet-only
         visibility: hidden !important
 +desktop
-    .make-hidden-desktop
+    .make-desktop-hidden
         display: none !important
-    .make-invisible-desktop
+    .make-desktop-invisible
         visibility: hidden !important
 +desktop-only
     .make-hidden-desktop-only
@@ -66,9 +71,9 @@ $space-size: 1.0rem !default
     .make-invisible-desktop-only
         visibility: hidden !important
 +widescreen
-    .make-hidden-widescreen
+    .make-widescreen-hidden
         display: none !important
-    .make-invisible-widescreen
+    .make-widescreen-invisible
         visibility: hidden !important    
 
 // ====================================
